# PDW_RST

./: Cargo.toml  PDW_Deployment_Guide.md  PDW_Functional_Specification.md  PDW_QUERIES.yaml  PDW_Technical_Specification.md  PersonalDataWareHouse.cfg  README.md  build.ps1  build.sh  pdw_config.toml  test_documentation_properties.py
.kiro/specs/pdw-documentation/: design.md  requirements.md  tasks.md
.kiro/specs/pdw-rust-migration/: design.md  requirements.md  tasks.md
src/: config.rs  database.rs  error.rs  etl.rs  excel.rs  logging.rs  main.rs  reporting.rs
