[package]
name = "pdw-rust"
version = "9.11.0"
edition = "2021"
authors = ["PDW Migration Team"]
description = "Personal Data Warehouse - Rust implementation"
license = "MIT"
repository = "https://github.com/your-org/pdw-rust"
keywords = ["etl", "excel", "sqlite", "data-warehouse", "financial"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "pdw"
path = "src/main.rs"

[dependencies]
# Excel file processing
calamine = "0.22"

# SQLite database operations
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }

# Configuration file handling
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ini = "1.3"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# YAML processing
serde_yaml = "0.9"

# JSON handling
serde_json = "1.0"

# Excel writing
rust_xlsxwriter = "0.49"

# CSV handling
csv = "1.2"

# Compression
flate2 = "1.0"

# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }

# Path handling
path-absolutize = "3.1"

# Hostname detection
hostname = "0.3"

[dev-dependencies]
# Property-based testing
proptest = "1.2"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Testing with temporary files
tempfile = "3.0"

# Test utilities
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true

[[bench]]
name = "performance_comparison"
harness = false